log handling + project file configuration changes
